// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Byline test on android renders byline with links correctly with a section colour 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="/profile/alexandra-frean"
  style={
    Object {
      "color": "blue",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
      "textDecorationLine": "underline",
    }
  }
>
  Alexandra Frean
</Text>
`;

exports[`Article Byline test on android renders byline with links correctly with a single author 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="/profile/alexandra-frean"
  style={
    Object {
      "color": "#006699",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
      "textDecorationLine": "underline",
    }
  }
>
  Alexandra Frean
</Text>
`;

exports[`Article Byline test on android renders byline with links correctly with a single inline element 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#006699",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
    }
  }
>
  Lindsay McIntosh Scottish Political Editor
</Text>
`;

exports[`Article Byline test on android renders byline with links correctly with an empty AST (empty byline on DB) 1`] = `null`;

exports[`Article Byline test on android renders byline with links correctly with multiple authors separated by spaces 1`] = `
Array [
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/camilla-long"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Camilla Long
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
     
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/mike-atherton"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Mike Atherton
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
     
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/alexandra-frean"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>,
]
`;

exports[`Article Byline test on android renders byline with links correctly with multiple authors separated by text with commas 1`] = `
Array [
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/camilla-long"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Camilla Long
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    , 
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/mike-atherton"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Mike Atherton
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    , 
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/alexandra-frean"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>,
]
`;

exports[`Article Byline test on android renders byline with links correctly with styles 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="/profile/alexandra-frean"
  style={
    Object {
      "color": "red",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
      "textDecorationLine": "underline",
    }
  }
>
  Alexandra Frean
</Text>
`;

exports[`Article Byline test on android renders byline with links correctly with the author at the end 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    RBS Six Nations 
  </Text>,
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/mike-atherton"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Mike Atherton
  </Text>,
]
`;

exports[`Article Byline test on android renders byline with links correctly with the author in the begining 1`] = `
Array [
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/profile/camilla-long"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
        "textDecorationLine": "underline",
      }
    }
  >
    Camilla Long
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    , Environment Editor
  </Text>,
]
`;

exports[`Article Byline test on android renders correctly with a section colour 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "blue",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
    }
  }
>
  Alexandra Frean
</Text>
`;

exports[`Article Byline test on android renders correctly with a single author 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#006699",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
    }
  }
>
  Alexandra Frean
</Text>
`;

exports[`Article Byline test on android renders correctly with a single inline element 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#006699",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
    }
  }
>
  Lindsay McIntosh Scottish Political Editor
</Text>
`;

exports[`Article Byline test on android renders correctly with an empty AST (empty byline on DB) 1`] = `null`;

exports[`Article Byline test on android renders correctly with multiple authors separated by spaces 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    Camilla Long
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
     
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    Mike Atherton
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
     
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    Alexandra Frean
  </Text>,
]
`;

exports[`Article Byline test on android renders correctly with multiple authors separated by text with commas 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    Camilla Long
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    , 
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    Mike Atherton
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    , 
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    Alexandra Frean
  </Text>,
]
`;

exports[`Article Byline test on android renders correctly with styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
      "flexDirection": "row",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 13,
      "lineHeight": 13,
      "textDecorationLine": "underline",
    }
  }
>
  Alexandra Frean
</Text>
`;

exports[`Article Byline test on android renders correctly with the author at the end 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    RBS Six Nations 
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    Mike Atherton
  </Text>,
]
`;

exports[`Article Byline test on android renders correctly with the author in the begining 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    Camilla Long
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 13,
      }
    }
  >
    , Environment Editor
  </Text>,
]
`;
